--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
     hibernate:
       ddl-auto: create
     properties:
+      hibernate.default_batch_fetch_size: 100
       hibernate:
         format_sql: true
         show_sql: false
